[gd_scene format=3 uid="uid://dgqkvwpvtl7wd"]

[ext_resource type="Script" uid="uid://c4cs2sx214gkl" path="res://scenes/summary_ui.gd" id="1_yxf0d"]

[node name="SummaryLayer" type="CanvasLayer" unique_id=79782660]

[node name="SummaryUI" type="Control" parent="." unique_id=1648679984]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yxf0d")

[node name="ColorRect" type="ColorRect" parent="SummaryUI" unique_id=1802344891]
visible = false
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -562.0
offset_top = -306.0
offset_right = 583.0
offset_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="Panel" type="Panel" parent="SummaryUI" unique_id=1050227527]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="SummaryUI/Panel" unique_id=2095878397]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="SummaryUI/Panel/VBoxContainer" unique_id=1875119116]
layout_mode = 2

[node name="OrdersLabel" type="Label" parent="SummaryUI/Panel/VBoxContainer" unique_id=869266342]
layout_mode = 2

[node name="MissedLabel" type="Label" parent="SummaryUI/Panel/VBoxContainer" unique_id=1597804466]
layout_mode = 2

[node name="RestartButton" type="Button" parent="SummaryUI/Panel/VBoxContainer" unique_id=1587004753]
process_mode = 3
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="SummaryUI/Panel/VBoxContainer/RestartButton" to="SummaryUI" method="_on_restart_button_pressed"]
